# PCDet_ros

./: .gitmodules  README.md
lidar_objects_msgs/: CMakeLists.txt  package.xml
lidar_objects_msgs/msg/: Bbox3d.msg  Object.msg  ObjectArray.msg  Other_info.msg
pvrcnn_ros_node/: CMakeLists.txt  package.xml
pvrcnn_ros_node/cfgs/kitti_models/: PartA2_free.yaml  pointpillar.yaml  pointrcnn.yaml  pointrcnn_iou.yaml  pv_rcnn.yaml  second.yaml  second_multihead.yaml
pvrcnn_ros_node/cfgs/nuscenes_models/: cbgs_pp_multihead.yaml  cbgs_second_multihead.yaml
pvrcnn_ros_node/launch/: pvrcnn _ch.launch  pvrcnn.launch  pvrcnn_ch.launch
pvrcnn_ros_node/reconfigure/: Thresholds.cfg  detection_thresholds.yml
pvrcnn_ros_node/src/: detect.py  muti_detect.py  open_pingtrcnn.py  single_inference_tracking.py
